Add customer swagger notation
